[package]
name = "pp-recalculator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["full"] }
bitflags = "2.1.0"
lazy_static = "1.4.0"
akatsuki-pp = { git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "764da0dbf42ed80441acf99d070aaedabaed4b75" }
sqlx = { version = "0.6.3", features = [
    "mysql",
    "macros",
    "runtime-tokio-rustls",
] }
clap = "4.2.7"
indicatif = "0.17.3"
console = "0.15.5"

[profile.dev.package."*"]
opt-level = 0

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true


[package.metadata.cargo-make]
warn_unused_must_use = false
